<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App -->
    <string name="app_name">Руководство по  городу</string>

    <!-- Navigation -->
    <string name="menu_home">Главная</string>
    <string name="menu_parks">Парки</string>
    <string name="menu_cafes">Кафе</string>
    <string name="menu_restaurants">Рестораны</string>
    <string name="menu_about">О приложении</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_details">Детали</string>

    <!-- Home -->
    <string name="home_title">Нижний Новгород</string>
    <string name="home_subtitle">
        Руководство по интересным местам города
    </string>

    <!-- Parks -->
    <string name="park1_title">Парк Швейцария</string>
    <string name="park1_desc">
        Один из самых длинных парков города
    </string>

    <string name="park2_title">Александрийский сад</string>
    <string name="park2_desc">
        Парк с красивым видом на Волгу
    </string>

    <string name="park3_title">Сормовский парк</string>
    <string name="park3_desc">
        Самый большой парк с атракционами и прогулочными зонами
    </string>

    <string name="park4_title">Парк Победы</string>
    <string name="park4_desc">
        Музей военной техники под открытым небом
    </string>

    <string name="park5_title">Ботанический сад Лобаческого</string>
    <string name="park5_desc">
        Здесь можно увидеть растения со всего мира
    </string>

    <!-- Cafes -->
    <string name="cafe1_title">Surf Coffee</string>
    <string name="cafe1_desc">
        Стилизованная кофейня с современным дизайном
    </string>

    <string name="cafe2_title">Skuratov Coffee</string>
    <string name="cafe2_desc">
        Необычная кофейня с минималистичном стиле
    </string>

    <string name="cafe3_title">Лепи тесто</string>
    <string name="cafe3_desc">
        Кафе с большим выбором пельменей
    </string>

    <string name="cafe4_title">Мишка</string>
    <string name="cafe4_desc">
        Кафе с большим выбором десертов
    </string>

    <string name="cafe5_title">Штолле</string>
    <string name="cafe5_desc">
        Кафе специализирующееся на приготовлении пирогов
    </string>

    <!-- Restaurants -->
    <string name="restaurant1_title">Митрич</string>
    <string name="restaurant1_desc">
        Современный ресторан в центре города
    </string>

    <string name="restaurant2_title">Yale</string>
    <string name="restaurant2_desc">
        Ресторан с европейской кухней
    </string>

    <string name="restaurant3_title">Базар</string>
    <string name="restaurant3_desc">
        Ресторан с разными кухнями мира
    </string>

    <string name="restaurant4_title">Мох</string>
    <string name="restaurant4_desc">
        Ресторан авторской кухни из фермерских продуктов и мяса диких животных
    </string>

    <string name="restaurant5_title">Пяткинъ</string>
    <string name="restaurant5_desc">
        Ресторан с русской кухней
    </string>

    <!-- About -->
    <string name="about_text">
        Приложение с рекомендациями мест в Нижнем Новгороде
    </string>

    <!-- Settings -->
    <string name="settings_text">
        Экран с настройками
    </string>

</resources>