<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.sergey.cityguide.HomeFragment"
        android:label="@string/menu_home" />

    <fragment
        android:id="@+id/parksFragment"
        android:name="com.sergey.cityguide.ParksFragment"
        android:label="@string/menu_parks">

        <action
            android:id="@+id/action_parksFragment_to_detailFragment"
            app:destination="@id/detailFragment"/>

    </fragment>

    <fragment
        android:id="@+id/cafesFragment"
        android:name="com.sergey.cityguide.CafesFragment"
        android:label="@string/menu_cafes"/>

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.sergey.cityguide.AboutFragment"
        android:label="@string/menu_about"/>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.sergey.cityguide.SettingsFragment"
        android:label="@string/menu_settings"/>

    <fragment
        android:id="@+id/detailFragment"
        android:name="com.sergey.cityguide.DetailFragment"
        android:label="Details"/>

    <fragment
        android:id="@+id/restaurantsFragment"
        android:name="com.sergey.cityguide.RestaurantsFragment"
        android:label="Restaurants"/>

</navigation>